--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Sandra L Vlasnik</title>
+    <title>Jarod Harkendorff</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
@@ -14,7 +14,7 @@
 <br>
 <br>
 
-<h1>Sample Activity 2 Page for Sandra Vlasnik</h1>
+<h1>Jarod Harkendorff</h1>
 
 
 <br>
@@ -23,28 +23,16 @@
     <div id="wrapper" >
       <section>
 
-              <img class="profile-photo" src="img/vlasnik.jpg"/>
+              <img class="profile-photo" src="Me.jpg"/>
             <br>
 
             <p>
 
-            Sandra is a Senior lecturer in information technology at the University of Nebraska
-            at Omaha in Omaha Nebraska. She has over 20 years teaching experience at UNO. Courses she
-            teaches include: Web Application Development, Java, C++, C, Visual Basic, and Python Programming,
-            Managing the Database Environment, IT Ethics, and Organizations, Applications and Technology.
-            She also has application development experience as a Software Engineer for a government contractor.
-            </p>
+            Jarod is a student a UNO.  He is 22 years old and is majoring in MIS.  He has experience with python and a little bit of HTML.
 
             <hr>
-            <a href="boomer.html">Meet Her Office Mate: Boomer</a>
+            <a href="Ceily.html">Meet His dog: Ceily</a>
             <hr>
-
-            <p>
-            This is a very simple, sample site to demonstrate HTML and CSS skills.
-            These skills are critical to developing your web applications
-            </p>
-
-
 
       </section>
   </div>
